--- a/index.html
+++ b/index.html
@@ -328,28 +328,28 @@
                             <td rowspan=4>Chair: Pablo Gonzalez</td>
                             <td>14:40</td>
                             <td>15:00</td>
-                            <td><strong>Invariance Assumptions for Class Distribution Estimation</strong>, by Dirk
+                            <td><a href="proceedings/Tasche2023.pdf">Invariance Assumptions for Class Distribution Estimation</a>, by Dirk
                                 Tasche (Independent researcher, CH)</td>
                         </tr>
                         <tr>
                             <td>15:00</td>
                             <td>15:20</td>
-                            <td><strong>MC-SQ and MC-MQ: Ensembles for Multi-class Quantification</strong>, by Zahra
+                            <td><a href="proceedings/Donyavi2023.pdf">MC-SQ and MC-MQ: Ensembles for Multi-class Quantification</a>, by Zahra
                                 Donyavi (University of New South Wales, AU), Adriane Serapião (Saõ Paulo State
                                 University, BR), and Gustavo Batista (University of New South Wales, AU)</td>
                         </tr>
                         <tr>
                             <td>15:20</td>
                             <td>15:40</td>
-                            <td><strong>Measuring Fairness under Unawareness of Sensitive Attributes: A
-                                    Quantification-Based Approach</strong>, by Alessandro Fabris (University of Padova,
+                            <td><a href="proceedings/Fabris2023.pdf">Measuring Fairness under Unawareness of Sensitive Attributes: A
+                                    Quantification-Based Approach</a>, by Alessandro Fabris (University of Padova,
                                 IT, and Max Planck Institute for Security and Privacy, DE), Andrea Esuli, Alejandro
                                 Moreo, Fabrizio Sebastiani (all National Council of Research, IT)</td>
                         </tr>
                         <tr>
                             <td>15:40</td>
                             <td>16:00</td>
-                            <td><strong>qunfold: Composable Quantification and Unfolding Methods in Python</strong>, by
+                            <td><a href="proceedings/Bunse2023.pdf">qunfold: Composable Quantification and Unfolding Methods in Python</a>, by
                                 Mirko Bunse (University of Dortmund, DE)</td>
                         </tr>
                         <tr>
@@ -369,14 +369,14 @@
                         <tr>
                             <td>16:50</td>
                             <td>17:10</td>
-                            <td><strong>Continuous Sweep: An Improved Binary Quantifier</strong>, by Kevin Kloos, Julian
+                            <td><a href="proceedings/Kloos2023.pdf">Continuous Sweep: An Improved Binary Quantifier</a>, by Kevin Kloos, Julian
                                 Karch (both Leiden University, NL), Quinten Meertens (University of Amsterdam, NL), and
                                 Mark de Rooij (Leiden University, NL)</td>
                         </tr>
                         <tr>
                             <td>17:10</td>
                             <td>17:30</td>
-                            <td><strong>Multi-Label Quantification</strong>, by Alejandro Moreo (National Council of
+                            <td><a href="proceedings/Moreo2023.pdf">Multi-Label Quantification</a>, by Alejandro Moreo (National Council of
                                 Research, IT), Manuel Francisco (University of Granada, ES), and Fabrizio Sebastiani
                                 (National Council of Research, IT)</td>
                         </tr>
